(lang dune 3.16)

(name dsl)

(generate_opam_files true)

(source 
 (github cucapra/packet-scheduling))

(authors
 "Anshuman Mohan"
 "Cassandra Sziklai"
 "Kabir Samsi"
 "Akash Dhiraj")

(maintainers
 "Anshuman Mohan"
 "Cassandra Sziklai"
 "Kabir Samsi"
 "Akash Dhiraj")

(license MIT)

(using menhir 3.0)

(package
 (name dsl)
 (synopsis "DSL for Programmable Packet Scheduling")
 (description "TBD")
 (depends 
   ocaml 
   dune 
   ounit2 
   menhir 
   ; libraries for Simulator
   core_kernel 
   pcap-format 
   hex 
   mmap
   csv
  )
)

