(lang dune 3.16)

(name dsl_lang)

(generate_opam_files true)

(source 
 (github cucapra/packet-scheduling))

(authors
 "Anshuman Mohan"
 "Cassandra Sziklai"
 "Kabir Samsi"
 "Akash Dhiraj")

(maintainers
 "Anshuman Mohan"
 "Cassandra Sziklai"
 "Kabir Samsi"
 "Akash Dhiraj")

(license MIT)

(using menhir 3.0)

(package
 (name dsl_lang)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune ounit2 menhir))

