(lang dune 3.16)

(name semantics)

(generate_opam_files true)

(source
 (github cucapra/packet-scheduling))

(authors "Kabir Samsi")

(maintainers "Kabir Samsi")

(license LICENSE)

(documentation https://github.com/cucapra/packet-scheduling/discussions/67)

(package
 (name semantics)
 (synopsis "OCaml artifact of the operational semantics construct for Rio")
 (description "TBD")
 (depends ocaml dune)
 (allow_empty)
)
